--- a/idbacrawconversion/index.html
+++ b/idbacrawconversion/index.html
@@ -840,7 +840,7 @@
 <p>iii) Select where you would like your file to be saved under "Output Directory".</p>
 <p>iv) Ensure mzML is selected under 'Options/Output format'.</p>
 <p>v) When the previous steps are completed, click 'Start'.</p>
-<p>vi) The output of this conversion will be a single autoexecute mzML for the entire plate or single mzML files for each MALDI TOF well. These files can be re-named and merged "Idbac_split_maldi_workflow" section below).</p>
+<p>vi) The output of this conversion will be a single autoexecute mzML for the entire plate or single mzML files for each well. These files will be re-named and replicates will be merged within the "Idbac_split_maldi_workflow" section below.</p>
 <p><img width="1054" alt="autoexex" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/54cb4f20-2283-431f-b698-6757f2d3125f"></p>
 <p><img width="1066" alt="Manualex" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/e3798a46-19ce-4f99-979d-febc9f9f8338"></p>
 <p><img alt="image" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/98c67e40-dcab-4d12-9178-f58432b9665d" /></p>
@@ -880,7 +880,7 @@
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1-2.1-2M12.5 7v5.2l4 2.4-1 1L11 13V7h1.5M11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2v1.8Z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 14, 2023 16:15:57</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 14, 2023 16:18:14</span>
   </span>
 
     
