--- a/idbacanalysis/index.html
+++ b/idbacanalysis/index.html
@@ -1067,13 +1067,15 @@
 <p>a) If you did not include a metadata spreadsheet during the workflow submission, you may upload the file here.</p>
 <p>b) Choose your preferred parameters for dendrogram visulation: clustering method, color-coding threshold, and metadata category that will be displayed next to your strain names.</p>
 <p>c) Select how database hits will be displayed in the dendrogram. </p>
-<p>d) If you would like to remove isolates from your dataset, you may so here. Additionally, you can choose a dendrogram cut-height and display dendrogram distance values for each isolate. </p>
-<p>e) Your dendrogram will be displayed according to the parameters set above. Note: Database strains will be labeled as 'DB'.</p>
-<p>f) This option allows you to visualize a single spectrum, or compare two spectra via a mirror plot. </p>
-<p><img alt="1b" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/c91895bd-4ec7-457e-932c-e03c3941bd2a" /></p>
-<p><img alt="3i" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/1d479a82-fc06-45e8-892b-80b7a6c6b56a" /></p>
-<p><img alt="4i" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/f15854bc-8860-44b4-99d8-acb103672013" /></p>
-<p><img alt="5i" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/66b7a108-ee63-46d3-ac54-2a97c23c5e07" /></p>
+<p>d) If you would like to remove isolates from your dataset, you may so here. </p>
+<p>e) You can choose a dendrogram cut-height and display dendrogram distance values for each isolate. </p>
+<p>f) Your dendrogram will be displayed according to the parameters set above. Note: Database strains will be labeled as 'DB'.</p>
+<p>g) Visualize a single spectrum or compare two spectra via a mirror plot. </p>
+<p>h) URL link to easily share this analysis page.</p>
+<p><img alt="a1" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/85c787fc-2ec6-4cae-af4e-c58bf4903da9" /></p>
+<p><img alt="a2" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/8d60bbe3-69f2-44c1-9fca-4428d1212b56" /></p>
+<p><img alt="a3" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/5dc59355-a75b-4008-9b73-dbc9e3c6f418" /></p>
+<p><img alt="a4" src="https://github.com/Wang-Bioinformatics-Lab/GNPS2_Documentation/assets/140128524/81629d5d-bf51-41d8-9998-880b681c0974" /></p>
 
 
 
@@ -1094,7 +1096,7 @@
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1-2.1-2M12.5 7v5.2l4 2.4-1 1L11 13V7h1.5M11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2v1.8Z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">February 14, 2024 18:08:24</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">February 14, 2024 18:33:56</span>
   </span>
 
     
