--- a/faq/index.html
+++ b/faq/index.html
@@ -1308,6 +1308,9 @@
 <li><strong>Check for Neighbors:</strong> Next, check if your molecule has any neighboring connections in the network. </li>
 <li><strong>Examine Singletons:</strong> To be thorough, examine the network including singletons.</li>
 </ol>
+<p><strong>Q: How to show the singletons in a network?</strong></p>
+<p><strong>A:</strong></p>
+<p>At the classical_networking_workflow or feature_based_molecular_networking_workflow task result page, click "Visualize Full Network  w/ Singletons in Browser" in the "Network Visualizations" section.</p>
 <p><strong>Q: I have a ton of data to analyze at GNPS2 but the File Uploader is slow, how do I get my data over there?</strong></p>
 <p><strong>A:</strong></p>
 <p>GNPS2 has an FTP/SFTP upload portal that is meant for close collaborators to be able to upload a significant amount of data. Otherwise, since GNPS2 does not have the ability to store massive amounts of data for the broader community, we recommend deposition of the data at a public repository such as MassIVE in order to do analysis of such data at GNPS2. </p>
@@ -1331,7 +1334,7 @@
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1-2.1-2M12.5 7v5.2l4 2.4-1 1L11 13V7h1.5M11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2v1.8Z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">August 9, 2024 20:28:05</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">August 13, 2024 20:27:10</span>
   </span>
 
     
