deploy: ba67dff731f3ad3410a58608f419957eb096a870

--- a/404.html
+++ b/404.html
@@ -672,7 +672,7 @@
         
   
   <span class="md-ellipsis">
-    IDBac Protein Analysis
+    Run Analysis Workflow
   </span>
   
 
@@ -693,7 +693,7 @@
         
   
   <span class="md-ellipsis">
-    IDBac Small Molecule Analysis
+    Protein and Small Molecule Analysis
   </span>
   
 
