--- a/idbacofficehours/index.html
+++ b/idbacofficehours/index.html
@@ -1401,8 +1401,10 @@
 <p>Weekly office hours will be hosted by Nyssa Krull <a href="nkrull@uic.edu">(nkrull@uic.edu)</a> via <a href="https://uic.zoom.us/j/85354946320?pwd=RmCgZ43hNraLe2F3JaLJygAbNeTmSJ.1">Zoom</a> every Friday at 10am CST. </p>
 <p>These sessions provide an opportunity to recieve hands-on support with IDBac workflows, ask questions or discuss features offered on the web analysis platform. 
 <br></p>
+<blockquote>
 <p>To RSVP to an upcoming session, please fill out the Google form below. 
 <br></p>
+</blockquote>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfYVB6Ieq6Ap-1SKy0QjarTIHUSiqpetmXnmTv3qM3ZQktiNQ/viewform?embedded=true" width="640" height="908" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
@@ -1424,7 +1426,7 @@
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">September 12, 2024 19:08:43</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">September 12, 2024 19:13:41</span>
   </span>
 
     
