--- a/contact/index.html
+++ b/contact/index.html
@@ -1487,6 +1487,7 @@
 <p>The <a href="https://www.cs.ucr.edu/~mingxunw/">Wang Bioinformatics Lab</a> at UC Riverside builds and maintains GNPS2. Specifically, the PI - Mingxun Wang (<a href="mailto:mingxun.wang@cs.ucr.edu">mingxun.wang@cs.ucr.edu</a> hosts an office hours on a weekly basis for the benefit of the community. This office hours is virtual and on Zoom:</p>
 <p><a href="https://ucr.zoom.us/j/98049645231">https://ucr.zoom.us/j/98049645231</a></p>
 <p>In office hours we'll cover new and old features of GNPS2 and most importantly we'll take your personal questions about GNPS2, computational mass spectrometry, and any science you want to chat about! We'll start office hours given the time below and keep going until there are no more questions. If office hours get too busy, we will limit each question to 10 min.  </p>
+<p>NOTE: We also have specific IDBac office hours if you want to <a href="../idbacofficehours/">check that out</a>.</p>
 <p>Upcoming Office Hour Schedule</p>
 <table>
 <thead>
@@ -1528,7 +1529,7 @@
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">September 17, 2024 15:00:35</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">September 17, 2024 17:46:48</span>
   </span>
 
     
