--- a/idbac-start-here/index.html
+++ b/idbac-start-here/index.html
@@ -1651,7 +1651,7 @@ flowchart LR
     F --&gt; |No| G[Click 'Downstream Analysis']
     F --&gt; |Yes| H[Complete the steps in this flowchart for your small molecule data]
     click B href "https://proteowizard.sourceforge.io/"
-    click C href "https://docs.google.com/spreadsheets/d/e/2PACX-1vSiVhxSfJDf3PEZ6ts_Rf124xX7rDvHGF69fqJy4JlbcyPHvUm60BUoBhN4Z_BRpA/pub?output=xlsx"
+    click C href "https://docs.google.com/spreadsheets/d/1ihFy6lQyJtWy9fp46ahMPWk7xLp2tJ3q/edit?usp=sharing&amp;ouid=102573514213912402103&amp;rtpof=true&amp;sd=true"
     click D href "https://gnps2.org/homepage"
     click E href "https://gnps2.org/workflowinput?workflowname=idbac_split_maldi_workflow"</p>
 <p>%% Styling
@@ -1690,7 +1690,7 @@ linkStyle 4 stroke:#ffcc33,stroke-width:2px
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 2, 2024 17:56:36</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 2, 2024 17:58:11</span>
   </span>
 
     
