--- a/idbac-start-here/index.html
+++ b/idbac-start-here/index.html
@@ -614,6 +614,7 @@
 </a>
 <h1>Start Here</h1>
 <p>NOTE: This page is currently being updated, please visit at a later time or email nkrull@uic.edu with any questions</p>
+<p>This is a flow chart for a quickstart start. For each tool, click on each step to go to the tools. </p>
 <div class="mermaid">flowchart TD
     A[Raw Bruker Data] --&gt; B[Convert raw protein data to mzML via MSConvert]
     B --&gt; C[Download and fill out a MALDI TOF plate map]
@@ -649,7 +650,7 @@
 <span class="md-icon" title="Last update">
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 4, 2024 18:32:33</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 4, 2024 18:36:48</span>
 </span>
 </aside>
 </article>
