--- a/idbac-start-here/index.html
+++ b/idbac-start-here/index.html
@@ -613,8 +613,10 @@
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M10 20H6V4h7v5h5v3.1l2-2V8l-6-6H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h4zm10.2-7c.1 0 .3.1.4.2l1.3 1.3c.2.2.2.6 0 .8l-1 1-2.1-2.1 1-1c.1-.1.2-.2.4-.2m0 3.9L14.1 23H12v-2.1l6.1-6.1z"></path></svg>
 </a>
 <h1>Start Here</h1>
-<p>NOTE: This page is currently being updated, please visit at a later time or email nkrull@uic.edu with any questions</p>
-<p>This is a flow chart for a quickstart start. For each tool, click on each step to go to the tools. </p>
+<div align="center">This is a flow chart for a quickstart start. For each tool, click on each step to go to the tools. 
+
+NOTE: This page is currently being updated, please visit at a later time or email nkrull@uic.edu with any questions
+
 <div class="mermaid">flowchart TD
     A[Raw Bruker Data] --&gt; B[Convert raw protein data to mzML via MSConvert]
     B --&gt; C[Download and fill out a MALDI TOF plate map]
@@ -645,12 +647,13 @@
     linkStyle 3 stroke:#ffcc33,stroke-width:2px
     linkStyle 4 stroke:#ffcc33,stroke-width:2px
 </div>
+</div>
 <aside class="md-source-file">
 <span class="md-source-file__fact">
 <span class="md-icon" title="Last update">
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 6, 2024 16:39:59</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 6, 2024 16:42:21</span>
 </span>
 </aside>
 </article>
