--- a/idbac-brukerstart-here/index.html
+++ b/idbac-brukerstart-here/index.html
@@ -726,18 +726,18 @@
     click L href "https://wang-bioinformatics-lab.github.io/GNPS2_Documentation/idbacsumbmitdata/"
 
  %% Styling
-    style A fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style B fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style C fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style D fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style E fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style F fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style G fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style H fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style I fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style J fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style K fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
-    style L fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:12px
+    style A fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style B fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style C fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style D fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style E fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style F fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style G fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style H fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style I fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style J fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style K fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
+    style L fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:16px
 
 
 
@@ -763,7 +763,8 @@
 
   Use the following images to convert raw Bruker data to mzML
 
-<a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/478649c9-be10-4460-9d0d-3f4b34171777"><img alt="msconvert3" src="https://github.com/user-attachments/assets/478649c9-be10-4460-9d0d-3f4b34171777" width="1066"/></a>
+
+![MSConvertEDITED](https://github.com/user-attachments/assets/a4aafff0-1740-4bd7-8741-83e82af079a6)
 <a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/cad440c8-917a-463f-a247-bc9f12ac3236"><img alt="msconvert1" src="https://github.com/user-attachments/assets/cad440c8-917a-463f-a247-bc9f12ac3236" width="1054"/></a>
 <a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/91edf847-5647-4c89-bddd-154cde86a91c"><img alt="msconvert2" src="https://github.com/user-attachments/assets/91edf847-5647-4c89-bddd-154cde86a91c" width="1066"/></a>
 </details>
@@ -772,7 +773,7 @@
 <span class="md-icon" title="Last update">
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 6, 2024 19:46:17</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 6, 2024 20:01:28</span>
 </span>
 </aside>
 </article>
