--- a/idbac-brukerstart-here/index.html
+++ b/idbac-brukerstart-here/index.html
@@ -688,20 +688,17 @@
     B --&gt; C[Download and fill out a MALDI TOF plate map]
     C --&gt; D[Upload converted mzML files and plate map to GNPS2]
     D --&gt; E[Run the IDBac_split_MALDI workflow]
-    E --&gt; F[Make a database deposition]
-    F --&gt; G[Proceed to the IDBac deposition documentation]
-    E --&gt; H[Run an analysis]
-    H --&gt; I[Do you have small molecule data you would like to add to the analysis?]
-    I --&gt; |No| J[Click 'Downstream Analysis' on the split MALDI page]
-    I --&gt; |Yes| K[Complete the steps in this flowchart for your small molecule data]
-    K --&gt; L[Proceed to the analysis documentation]
+    E --&gt; F[Contribute to the IDBac database]
+    F --&gt; G[Proceed to the deposition documentation]
+    E --&gt; H[Run an analysis workflow]
+    H --&gt; I[Proceed to the analysis documentation]
 
     click B href "https://proteowizard.sourceforge.io/"
     click C href "https://docs.google.com/spreadsheets/d/1ihFy6lQyJtWy9fp46ahMPWk7xLp2tJ3q/edit?usp=sharing&amp;ouid=102573514213912402103&amp;rtpof=true&amp;sd=true"
     click D href "https://gnps2.org/homepage"
     click E href "https://gnps2.org/workflowinput?workflowname=idbac_split_maldi_workflow"
     click G href "https://wang-bioinformatics-lab.github.io/GNPS2_Documentation/idbacdepositions/)"
-    click L href "https://wang-bioinformatics-lab.github.io/GNPS2_Documentation/idbacsumbmitdata/"
+    click I href "https://wang-bioinformatics-lab.github.io/GNPS2_Documentation/idbacsumbmitdata/"
 
  %% Styling
     style A fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px
@@ -712,12 +709,7 @@
     style F fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px
     style G fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px
     style H fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px
-    style I fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px
-    style J fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px
-    style K fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px
-    style L fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px
-
-
+    style I fill:#FFFFFF,stroke:#000000,stroke-width:2px,font-size:18px 
 
 %% Link Styling
     linkStyle 0 stroke:#ffcc33,stroke-width:3px
@@ -728,9 +720,8 @@
     linkStyle 5 stroke:#ffcc33,stroke-width:3px
     linkStyle 6 stroke:#ffcc33,stroke-width:3px
     linkStyle 7 stroke:#ffcc33,stroke-width:3px
-    linkStyle 8 stroke:#ffcc33,stroke-width:3px
-    linkStyle 9 stroke:#ffcc33,stroke-width:3px
-    linkStyle 10 stroke:#ffcc33,stroke-width:3px
+
+
 
 
 </div>
@@ -763,7 +754,7 @@
 <span class="md-icon" title="Last update">
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 6, 2024 20:52:56</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 6, 2024 21:14:00</span>
 </span>
 </aside>
 
