deploy: e89da29f476f8b7e5501466eff263ec9b2c695a3

--- a/404.html
+++ b/404.html
@@ -715,7 +715,7 @@
         
   
   <span class="md-ellipsis">
-    Submit to the IDBAc database
+    Contribute to the IDBac database
   </span>
   
 
