deploy: 87c1c06c158221992ebbd29168cb405181c77c78

--- a/404.html
+++ b/404.html
@@ -715,7 +715,7 @@
         
   
   <span class="md-ellipsis">
-    Contribute to the IDBac database
+    Contribute to the database
   </span>
   
 
