--- a/idbacdepositions/index.html
+++ b/idbacdepositions/index.html
@@ -669,7 +669,7 @@
     B --&gt;|No| D[View the 'Start Here' documentation]
     C --&gt; E[Upload your mzML and metadata files to the GNPS2 File Browser]
     E --&gt; F[Open the IDBac deposition workflow]
-    F --&gt; G[Choose a task description and select the metadata and spectra mzML files]
+    F --&gt; G[Choose a task description and select your metadata and spectra mzML files]
     G --&gt; H[Would you like to QC your spectra before deposition?]
     H --&gt; |Yes| I[Select 'Yes' from the 'Dryrun Mode' dropdown and submit workflow]
     H --&gt; |No| J[Select 'No' from the 'Dryrun Mode' dropdown and submit workflow]
@@ -736,7 +736,7 @@
 <span class="md-icon" title="Last update">
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 7, 2024 00:54:16</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 7, 2024 00:55:41</span>
 </span>
 </aside>
 </article>
