deploy: a346d3f403989ad8a7b84df6ba3048574c1cd8a2

--- a/idbacnewnonbruker/index.html
+++ b/idbacnewnonbruker/index.html
@@ -717,12 +717,11 @@
 <summary>Instructions for filling out the msConvert_File_Merger spreadsheet</summary>
 
 
-i) Insert the current filenames for your individual mzML files into the 'input_filename' column. It is important to keep the '.mzml' tag on the end of the filename in this column. Take care to make sure the filenames in the spreadsheet under 'input_filename' match the filenames in your data folder.
+i) Insert the current filenames for your individual mzML files into the 'input_filename' column. It is important to keep the '.mzml' tag on the end of the filename in this column. Take care to make sure the filenames in the spreadsheet under 'input_filename' match the filenames in your data folder.<br/>
 
 
-ii) Type a new filename for replicate spectra you would like to combine into a single mzml file. You do NOT need to include the '.mzml' tag in this column. Make sure the 'output_filename' is identical for all replicate spectra you want to be merged. Otherwise the workflow will write files with different 'output_filename' entries as separate mzML files. 
-
-  <ul>
+ii) Type a new filename for replicate spectra you would like to combine into a single mzml file. You do NOT need to include the '.mzml' tag in this column. Make sure the 'output_filename' is identical for all replicate spectra you want to be merged. Otherwise the workflow will write files with different 'output_filename' entries as separate mzML files. <br/>
+<ul>
 <a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/0161167f-bc69-437d-bac2-6c5c909b0be3"><img src="https://github.com/user-attachments/assets/0161167f-bc69-437d-bac2-6c5c909b0be3" width="nonBruker1"/></a>
 </ul>
 </details>
@@ -738,18 +737,13 @@ ii) Type a new filename for replicate spectra you would like to combine into a s
 <p>This workflow will combine spectra from separate spots that correspond to the same bacterial strain (i.e. replicate spots). The output is a single mzML file (per strain) that contains the replicate spectra as separate scans.</p>
 
 
-i) Open the msConvert_File_Merger workflow.
+i) Open the msConvert_File_Merger workflow.<br/>
 
+ii) Select your mzML files and your input/output spreadsheet from the dropdown menus.<br/>  
 
-ii) Select your mzML files and your input/output spreadsheet from the dropdown menus.  
+iii) Select mzML or mzXML as your output data format.<br/>
 
-
-iii) Select mzML or mzXML as your output data format.  
-
-
-iV) Submit workflow.
-
-
+iV) Submit workflow.<br/>
 <a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/47689134-5d68-423c-8d5a-cde0d62f15cd"><img src="https://github.com/user-attachments/assets/47689134-5d68-423c-8d5a-cde0d62f15cd" width="msConvert_File_Merger workflow"/></a>
 <ul>
 </ul>
@@ -759,7 +753,7 @@ iV) Submit workflow.
 <span class="md-icon" title="Last update">
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 7, 2024 02:23:26</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 7, 2024 02:26:08</span>
 </span>
 </aside>
 </article>
