deploy: 4793ae06647d1aaaea0b4aa3320fc50ada8c04f5

--- a/idbac-brukerstart-here/index.html
+++ b/idbac-brukerstart-here/index.html
@@ -654,7 +654,7 @@
 <p><em>Click on a step for links to the required tools/pages.</em></p>
 <div align="center">
 <div class="mermaid">flowchart TD
-    A[Starting with raw Bruker data] --&gt; B[Convert raw protein data to mzML via MSConvert]
+    A[Starting with raw Bruker data] --&gt; B[Convert raw protein data to mzML via msConvert]
     B --&gt; C[Download and fill out a MALDI TOF plate map]
     C --&gt; D[Upload converted mzML files and plate map to GNPS2]
     D --&gt; E[Run the IDBac_split_MALDI workflow]
@@ -707,20 +707,26 @@
 </ul>
 </details>
 <details>
-<summary>Accessing your converted files from the split_MALDI workflow</summary>
+<summary>Uploading files to the GNPS2 File Browser</summary>
+<ul>
+<a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/61c1f7ec-aee6-4720-8922-249627ab78bf"><img src="https://github.com/user-attachments/assets/61c1f7ec-aee6-4720-8922-249627ab78bf" width="FileBrowser1"/></a>
+<a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/d6ffe324-b43d-41c6-9765-2ec681985438"><img src="https://github.com/user-attachments/assets/d6ffe324-b43d-41c6-9765-2ec681985438" width="FileBrowser2"/></a>
+</ul>
+</details>
+<details>
+<summary>Accessing your converted files from the split_MALDI workflow</summary><br/>
 <p>Download the converted and re-named files to your desktop (allowing for manual upload into a File Browser folder)</p>
 <ul>
 <a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/0e007833-e122-4003-a77e-05db076f1c75"><img alt="Download1" src="https://github.com/user-attachments/assets/0e007833-e122-4003-a77e-05db076f1c75" width="1054"/></a>
 <a class="glightbox" data-desc-position="bottom" data-height="auto" data-type="image" data-width="auto" href="https://github.com/user-attachments/assets/6b45ca81-aa5c-4332-9558-a25bfaee7406"><img alt="UPDATED DOWNLOAD" src="https://github.com/user-attachments/assets/6b45ca81-aa5c-4332-9558-a25bfaee7406" width="1054"/></a>
 </ul></details>
-<p>
-</p>
+
 <aside class="md-source-file">
 <span class="md-source-file__fact">
 <span class="md-icon" title="Last update">
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 7, 2024 02:28:58</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">December 7, 2024 02:34:03</span>
 </span>
 </aside>
 </article>
