deploy: a36d1a262d875b2fe4057f9fe2a75070476beb0a

--- a/idbacanalyzeyourdata/index.html
+++ b/idbacanalyzeyourdata/index.html
@@ -704,19 +704,20 @@
 </em><em>Small molecule data analysis requires a metadata sheet.</em></p>
 <div align="center">
 <div class="mermaid">flowchart TD
-    A[Submit your data for analysis] --&gt; B[Upload your metadata and mzML files to the GNPS2 File Browser]
-    B --&gt; C[Open the idbac_analysis_workflow]
-    C --&gt; D[Select appropriate data for each file selection section]
-    D --&gt; E[Select preferred distance metric]
-    E --&gt; F[Select preferred database distance threshold]
-    F --&gt; G[Submit workflow]
-    G --&gt; H[Choose a data analysis option]
-    H --&gt; I[Web IDBac Analysis Platform]
-    H --&gt; J[Database Search Summary- see tab below]
+    A[Submit your data for analysis] --&gt; B[Download and fill out an analysis metadata sheet]
+    B --&gt; C[Upload your metadata and mzML files to the GNPS2 File Browser]
+    C --&gt; D[Open the idbac_analysis_workflow]
+    D --&gt; E[Select appropriate data for each file selection section]
+    E --&gt; F[Select preferred distance metric]
+    F --&gt; G[Select preferred database distance threshold]
+    G --&gt; H[Submit workflow]
+    H --&gt; I[Choose a data analysis option]
+    I --&gt; J[Web IDBac Analysis Platform]
+    J --&gt; K[Database Search Summary- see tab below]
 
-   click B href "https://docs.google.com/spreadsheets/d/1Y7WHrFQR_SYpR_p5u_xL4BQimYorQ3-1PfAfVil3nL0/edit?usp=sharing"
-    click C href "https://gnps2.org/workflowinput?workflowname=idbac_analysis_workflow"
-    click H href "https://wang-bioinformatics-lab.github.io/GNPS2_Documentation/idbacanalysisplatform/"
+    click B href "https://docs.google.com/spreadsheets/d/1Y7WHrFQR_SYpR_p5u_xL4BQimYorQ3-1PfAfVil3nL0/edit?gid=678327011#gid=678327011"
+    click D href "https://gnps2.org/workflowinput?workflowname=idbac_analysis_workflow"
+    click J href "https://wang-bioinformatics-lab.github.io/GNPS2_Documentation/idbacanalysisplatform/"
 
 
 
@@ -778,7 +779,7 @@
 <span class="md-icon" title="Last update">
 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"></path></svg>
 </span>
-<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 21, 2025 23:52:35</span>
+<span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime">January 21, 2025 23:56:47</span>
 </span>
 </aside>
 </article>
